Bug 337657 - custom filters not displayed
Summary: custom filters not displayed
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: search (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-21 09:06 UTC by Philippe ROUBACH
Modified: 2015-06-14 10:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14
Sentry Crash Report:


Attachments
"tous" button" (159.71 KB, image/png)
2014-07-21 10:07 UTC, Philippe ROUBACH
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe ROUBACH 2014-07-21 09:06:21 UTC
opensuse 13.1 x86_64 , kde 4.13.3

i create tags
then
this creates a filter list "Tous"

1. first case

in kontact i click on akregator icon to display akregator
then
i close the kde session
then
i open a kde session
then
kontact is launched and displays akregator
then
i click on kmail icon
then
the filter list "Tous" button is not displayed

2. second case

in kontact i click on kmail icon to display kmail
then
i close the kde session
then
i open a kde session
then
kontact is launched and displays kmail
then
the filter list "Tous" button is displayed


Reproducible: Always
Comment 1 Laurent Montel 2014-07-21 09:58:08 UTC
what do you mean by "the filter list "Tous" button is not displayed" ?

Screenshot ?
Comment 2 Philippe ROUBACH 2014-07-21 10:07:04 UTC
Created attachment 87848 [details]
"tous" button"

see the button "Tous" of the custom filters at the upper right corner
Comment 3 Laurent Montel 2014-07-21 12:08:03 UTC
Ah ok.
I see.
I will try to fix it soon (and try to reproduce it)
Comment 4 Laurent Montel 2014-07-30 11:42:34 UTC
I confirm when we launch in kontact we can't see it.
Comment 5 Laurent Montel 2014-07-30 19:06:48 UTC
Git commit a362448b993cb76c03b5e1f7cecf4c5c5623d46d by Montel Laurent.
Committed on 30/07/2014 at 19:06.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 337657 - custom filters not displayed

FIXED-IN: 4.14

M  +1    -0    kmail/kmail_part.cpp
M  +5    -0    kmail/kmmainwidget.cpp
M  +1    -0    kmail/kmmainwidget.h
M  +1    -1    messagelist/core/quicksearchline.cpp
M  +7    -0    messagelist/pane.cpp
M  +3    -0    messagelist/pane.h

http://commits.kde.org/kdepim/a362448b993cb76c03b5e1f7cecf4c5c5623d46d
Comment 6 Philippe ROUBACH 2015-06-14 05:56:44 UTC
opensuse 13.1
kmail 4.14.9

since several versions before 4.14.9 this bug appears again .
Comment 7 Laurent Montel 2015-06-14 08:23:06 UTC
It works fine.
I see all filter in kontact. when kmail is displaying first.

So I need more information because it works fine even in kf5 version
Comment 8 Philippe ROUBACH 2015-06-14 08:39:48 UTC
it's difficult to reproduce phenomenon .

it's a random pb .

several times a week i encounter it .
Comment 9 Laurent Montel 2015-06-14 10:37:55 UTC
So it's the same bug as previously.
It's perhaps a bug in akonadi but the actual code works in kmail/kontact.
=> create a new bug with a specific test case.

Regards