Fix Bug 337657 - custom filters not displayed

FIXED-IN: 4.14
BUG: 337657