kmmainwidget.cpp
@@ -4889,3 +4889,8 @@ void KMMainWidget::slotChangeDisplayMessageFormat(MessageViewer::Viewer::Display
         mMsgView->update( true );
     }
 }
+
+void KMMainWidget::populateMessageListStatusFilterCombo()
+{
+    mMessagePane->populateStatusFilterCombo();
+}
